@startuml
'https://plantuml.com/class-diagram


    class DifficultyTemplate {
        +enemyMaxNumber: int
        +heroHp: int
        +shootDuration: int
        +mobEnemyHp: int
        +eliteEnemyHp: int
        +superEliteEnemyHp: int
        +bossEnemyHp: int
        +propDuration: int
        #increaseDifficultyOverTime: boolean
        #bossHpIncrease: boolean

        +setupDifficulty(): void
        +getBossHp(int): int

        #setEnemyMaxNumber(): abstract void
        #setHeroHp(): abstract void
        #setShootDuration(): abstract void
        #setEnemyHp(): abstract void
        #setPropDuration(): abstract void
        #setDynamicDifficulty(): abstract void
        -increaseEnemySpeed(Game): void

        +getEnemyMaxNumber(): int
        +getHeroHp(): int
    }

    class EasyDifficulty {
        +setEnemyMaxNumber(): void
        +setHeroHp(): void
        +setShootDuration(): void
        +setEnemyHp(): void
        +setPropDuration(): void
        +setDynamicDifficulty(): void
    }

    class NormalDifficulty {
        +setEnemyMaxNumber(): void
        +setHeroHp(): void
        +setShootDuration(): void
        +setEnemyHp(): void
        +setPropDuration(): void
        +setDynamicDifficulty(): void
    }

    class HardDifficulty {
        +setEnemyMaxNumber(): void
        +setHeroHp(): void
        +setShootDuration(): void
        +setEnemyHp(): void
        +setPropDuration(): void
        +setDynamicDifficulty(): void
    }

    DifficultyTemplate <|-- EasyDifficulty : 继承
    DifficultyTemplate <|-- NormalDifficulty : 继承
    DifficultyTemplate <|-- HardDifficulty : 继承

@enduml